add_subdirectory(dmrg)
add_subdirectory(measure)
if (BUILD_INIT)
  add_subdirectory(init)
endif(BUILD_INIT)
if (BUILD_CIDEAS)
  add_subdirectory(cideas)
endif(BUILD_CIDEAS)
if (BUILD_MPS_ROTATE)
  add_subdirectory(rotate)
endif (BUILD_MPS_ROTATE)
if (BUILD_MPS_COMPRESS)
  # mps_compress does not work!!
  add_subdirectory(compress)
endif (BUILD_MPS_COMPRESS)

if (BUILD_DMRG_EVOLVE)
  add_subdirectory(evolve)
endif (BUILD_DMRG_EVOLVE)

add_subdirectory(tools)
